--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -54,6 +54,7 @@
   gap: 12px;
   justify-content: center;
   min-height: 60vh;
+  margin-top: 10%;
 }
 .heroLogo {
   width: 220px;
@@ -92,19 +93,8 @@
   background: #218838;
 }
 .scrollDownIcon {
-  position: absolute;
-  left: 50%;
-  bottom: 32px;
-  transform: translateX(-50%);
-  margin-top: 0;
-  display: inline-block;
+  margin: 20px 0;
   cursor: pointer;
-  opacity: 0.85;
-  transition: opacity 0.2s, transform 0.2s;
-  z-index: 4;
-}
-.scrollDownIcon:hover {
-  opacity: 1;
 }
 .companyIntroContainer {
   display: flex;
@@ -935,7 +925,7 @@
 }
 
 .whyChooseUsSection {
-  background: linear-gradient(90deg, #e0f2f1 0%, #e3fcec 100%);
+  background: #e3f2fd;
   padding: 64px 0 48px 0;
   text-align: center;
   margin-bottom: 32px;
@@ -1182,13 +1172,16 @@
   margin-right: auto;
 }
 .companyIntroContent {
-  background: #f2fcf7;
+  background: #b7c7d7;
   border-radius: 40px 0 40px 40px;
   padding: 20px 24px 20px 24px;
-  max-width: 500px;
   box-shadow: 0 2px 16px rgba(44, 62, 80, 0.04);
   text-align: left;
   margin-right: 24px;
+}
+.counterWrapper {
+  width: 100%;
+  padding-bottom: 20px;
 }
 .companyIntroContent h2 {
   font-size: 1.5rem;
